minor change to js and css files

--- a/best-books-collection/src/index.css
+++ b/best-books-collection/src/index.css
@@ -207,7 +207,7 @@ h4,
 h5 {
   margin: 1.5rem 0;
   font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: 'Karla', sans-serif;
   line-height: 1.2;
   color: #404040; }
   h1:not(:first-child),
@@ -282,11 +282,11 @@ pre {
   padding: 1rem;
   tab-size: 2;
   color: #404040;
-  font-family: Menlo, monospace;
+  font-family: 'Karla', sans-serif;
   font-size: 14px;
   margin: 0 0 1.5rem 0; }
   pre code {
-    font-family: Menlo, monospace;
+    font-family: 'Karla', sans-serif;
     line-height: 1.2; }
 
 kbd {
@@ -296,7 +296,7 @@ kbd {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
   color: #333;
   display: inline-block;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Karla', sans-serif;
   font-size: 13px;
   line-height: 1.4;
   margin: 0 .1em;
@@ -306,7 +306,7 @@ kbd {
 :not(pre) > code {
   color: #404040;
   background: transparent;
-  font-family: Menlo, monospace;
+  font-family: 'Karla', sans-serif;
   font-size: 14px;
   padding: 0 0.2rem;
   border: 1px solid #dedede;
@@ -479,7 +479,7 @@ dd {
   background: #0366EE;
   color: #ffffff;
   font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: 'Karla', sans-serif;
   font-size: 1rem;
   text-transform: none;
   padding: .75rem 1.25rem;
@@ -665,3 +665,13 @@ caption {
   =============== */
 /* Layout
   =============== */
+
+/* MY PERSONAL STYLING */
+button.btn-red {
+  background-color: #ff0000;
+  border: 1px solid #ff0000;
+}
+
+.btn-red:hover {
+  background-color: #e20404;
+}
