--- a/best-books-collection/src/index.css
+++ b/best-books-collection/src/index.css
@@ -667,11 +667,78 @@ caption {
   =============== */
 
 /* MY PERSONAL STYLING */
+.is-flex {
+  display: flex;
+}
+
 button.btn-red {
   background-color: #ff0000;
   border: 1px solid #ff0000;
+  padding: 5px;
 }
 
 .btn-red:hover {
   background-color: #e20404;
+}
+
+.cancel {
+  color: #ff0000;
+  font-size: 30px;
+  font-weight: 700;
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  position: fixed;
+  padding: 15px;
+  margin-top: -15px;
+}
+
+.cancel:hover {
+  color: #e20404;
+}
+
+.display-none {
+  display: none;
+  transform: scale(0);
+  opacity: 0;
+  -webkit-transition: all .25s linear;
+  -o-transition: all .25s linear;
+  transition: all .25s linear;
+}
+
+.display-block {
+  display: block;
+  transition: .25s;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-main {
+  position:fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  padding: 50px;
+  border-radius: 5px;
+}
+
+.add-title {
+  color: #29de7d;
+  margin: 0;
+}
+
+.has-green {
+  color: #1cb864;
 }
