--- a/best-books-collection/src/index.css
+++ b/best-books-collection/src/index.css
@@ -739,6 +739,42 @@ button.btn-red {
   margin: 0;
 }
 
+.search-icon {
+  position: absolute;
+  top: 12px;
+  right: 15px;
+}
+
+.search-container {
+  position: relative;
+}
+
 .has-green {
   color: #1cb864;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.p-8 {
+  padding: 8px;
+}
+
+.search-input {
+  display: block;
+  border: 1px solid #cdcdcd;
+  border-radius: 4px;
+  padding: .75rem;
+  outline: none;
+  background: transparent;
+  margin-bottom: .5rem;
+  font-size: 1rem;
+  width: 100%;
+  max-width: 100%;
+  line-height: 1;
 }
